tests/fail/func_no_return.crema
def int foo() {
  int a = 2
}
